tdf#168589 - sc fix xls import with subtotal function

Check if the trimmed data range of Subtotal double references
is valid otherwise do not trim.

regression after: b89047a0f0100fb30121084cf42815aa792c1f88
(tdf#164843 - sc optimize "SubTotal" function's reference ranges)

cherry-pick from: fdf6777e02f4897bdb798457d3e6b8fbd343f8ab

Change-Id: I5f1fa4f67a685deb4a391e19e3acd9849b03c1b4
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/191691
Tested-by: Jenkins
Reviewed-by: Balazs Varga <balazs.varga@collabora.com>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/191757
Reviewed-by: Thorsten Behrens <thorsten.behrens@collabora.com>
Tested-by: allotropia jenkins <jenkins@allotropia.de>