sc/source/core/tool/compiler.cxx
@@ -6453,17 +6453,22 @@ void ScCompiler::AnnotateTrimOnDoubleRefs()
             if (pTok->GetType() == svDoubleRef)
             {
                 ScComplexRefData* pRefData = pTok->GetDoubleRef();
-                // no need to set pRefData->SetTrimToData(true); because we already trim here
+                // do no set pRefData->SetTrimToData(true); because we need to trim here if possible
                 ScRange rRange = pRefData->toAbs(aPos);
                 SCCOL nTempStartCol = rRange.aStart.Col();
                 SCROW nTempStartRow = rRange.aStart.Row();
                 SCCOL nTempEndCol = rRange.aEnd.Col();
                 SCROW nTempEndRow = rRange.aEnd.Row();
-                pDoc->ShrinkToDataArea(rRange.aStart.Tab(), nTempStartCol, nTempStartRow, nTempEndCol, nTempEndRow);
-                rRange.aStart.Set(nTempStartCol, nTempStartRow, rRange.aStart.Tab());
-                rRange.aEnd.Set(nTempEndCol, nTempEndRow, rRange.aEnd.Tab());
-                rRange.PutInOrder();
-                pRefData->SetRange(rRange, aPos);
+                pDoc->ShrinkToDataArea(rRange.aStart.Tab(), nTempStartCol, nTempStartRow,
+                    nTempEndCol, nTempEndRow);
+                // check if range is still valid
+                if (nTempStartRow <= nTempEndRow && nTempStartCol <= nTempEndCol)
+                {
+                    rRange.aStart.Set(nTempStartCol, nTempStartRow, rRange.aStart.Tab());
+                    rRange.aEnd.Set(nTempEndCol, nTempEndRow, rRange.aEnd.Tab());
+                    if (rRange.IsValid())
+                        pRefData->SetRange(rRange, aPos);
+                }
             }
             --ppTok;
         }
